=head1 Changes in DBD-Oracle 1.17 (svn rev NNN)

  Changed README.vms re logical name tables thanks to Jakob Snoer.

=head1 Changes in DBD-Oracle 1.16 (svn rev 515)   22nd October 2004

  NOTE:
  This release has major changes to Unicode support. See below.
  It no longer supports the old Oracle 7 OCI interface.
  It requires DBI >= 1.38 for some of the tests if using Perl 5.6.
  It no longer supports Perl 5.5 or earlier.

  Fixed placeholder names to be case insensitive thanks to Charles Jardine.
  Fixed some LOB test problems with Oracle 8.1.7 by implementing ora_lob_append
    with OCILobGetLength() and OCILobWrite(), instead of buggy OCILobWriteAppend(),
    if the Oracle client version is < 9.0. Thanks to Jeff Urlwin.
  Fixed handling of temporary LOBs thanks to Chris Donnelly.
  Fixed memory leaks in auto LOB refetch code thanks to Dongqiang Bai.
  Fixed reporting of length truncated in error message thanks to Jeff Urlwin.
  Fixed column_info() to handle TIMESTAMP and INTERVAL datatypes
    for Oracle >= 8 thanks to Stephen Clouse.
  Fixed STORE to cache attribute value in handle cache.
  Fixed seg fault returning LOB Locators reported by Raj Chandran.
  Fixed binding to allow overloaded scalars (not for 'inout' params).
  Fixed setting of $DBI::err to 0 triggering PrintWarn in DBI >= 1.41.
  Fixed some edge cases in row cache sizing.
  Fixed truncation error fetching very small numbers (1 ^ -130).
  Fixed Oraperl to not enable PrintError or AutoCommit (broken since 1.13).

  Changed some utf8 internals for LOBs.
  Changed ORA_OCI constant from being just 7 or 8 to being a dualvar:
    in numeric context returns the major.minor version number (8.1, 9.2 etc)
    in string context it returns the full "major.minor.foo.bar" version string.
  Changed some SUCCESS_WITH_INFO situtions to be treated as a "warning"
    by setting $DBI::err to "0" (and so trigger PrintWarn in DBI >= 1.43)
    eg "ORA-28011: the account will expire soon; change your password now"